@@ -145,13 +145,13 @@ public final class FileSystemView implements AutoCloseable {
             case "file":
                 return create(Paths.get(uri.resolve(".")));
             case "jar":
-                String jarUriStr = java.net.URLDecoder.decode(uri.toString(), StandardCharsets.UTF_8.name());
+                String jarUriStr = java.net.URLDecoder.decode(uri.toString(), StandardCharsets.UTF_8);
                 String jar = jarUriStr.replaceAll("^jar:(file:.*)!.*$", "$1");
                 String jarPath = jarUriStr.replaceAll("^jar:file:.*!(.*)" + classFile + "$", "$1");
                 URI jarUri = new URI("jar", jar, null);
                 return createFileSystemView(FileSystems.newFileSystem(jarUri, Collections.emptyMap()), jarPath);
             case "jrt":
-                String jrtUriStr = java.net.URLDecoder.decode(uri.toString(), StandardCharsets.UTF_8.name());
+                String jrtUriStr = java.net.URLDecoder.decode(uri.toString(), StandardCharsets.UTF_8);
                 String jrtPath = jrtUriStr.replaceAll("^jrt:/(.*)" + classFile + "$", "$1");
                 URI jrtUri = URI.create("jrt:/");
                 return createFileSystemView(FileSystems.newFileSystem(jrtUri, Collections.emptyMap()), jrtPath);
